# llama.cpp

./: .gitmodules  .output.txt  llama_api_documentation.md  llama_cpp_api_documentation.md
jvm/: .gitignore  CERTIFICATE_VERIFICATION.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  api-design-document.md  doc_template.md  gradle.properties  impl-foreign-completion-matrix.md  settings.gradle
jvm/.junie/: guidelines.md
jvm/buildSrc/: README.md
jvm/buildSrc/docs/: jextract.md  tdd-example.md
jvm/buildSrc/src/test/: README-TDD.md  README.md
jvm/cmake-plugin-test/: README.md
jvm/cmake-plugin-test/src/main/cpp/: CMakeLists.txt  test_program.cpp
jvm/docs/: api-design-document.md  tasks.md  tools.md
jvm/impl-foreign/: README.md
jvm/impl-foreign/src/main/resources/jextract/: llama.includes  llama.includes.x
jvm/impl-jni/: README.md
jvm/impl-jni/src/main/c/: llama_jni.c
jvm/jextract_test/: FILE.java  __darwin_mbstate_t.java  __darwin_pthread_attr_t.java  __darwin_pthread_cond_t.java  __darwin_pthread_condattr_t.java  __darwin_pthread_handler_rec.java  __darwin_pthread_mutex_t.java  __darwin_pthread_mutexattr_t.java  __darwin_pthread_once_t.java  __darwin_pthread_rwlock_t.java  __darwin_pthread_rwlockattr_t.java  __mbstate_t.java  __sFILE.java  __sbuf.java  _opaque_pthread_attr_t.java  _opaque_pthread_cond_t.java  _opaque_pthread_condattr_t.java  _opaque_pthread_mutex_t.java  _opaque_pthread_mutexattr_t.java  _opaque_pthread_once_t.java  _opaque_pthread_rwlock_t.java  _opaque_pthread_rwlockattr_t.java  _opaque_pthread_t.java  funopen$x0.java  funopen$x1.java  funopen$x2.java  funopen$x3.java  ggml_abort_callback.java  ggml_backend_compare_graph_backend$callback.java  ggml_backend_cpu_set_abort_callback$abort_callback.java  ggml_backend_dev_caps.java  ggml_backend_dev_get_extra_bufts_t.java  ggml_backend_dev_props.java  ggml_backend_eval_callback.java  ggml_backend_feature.java  ggml_backend_get_features_t.java  ggml_backend_graph_copy.java  ggml_backend_sched_eval_callback.java  ggml_backend_sched_set_eval_callback$callback.java  ggml_backend_set_abort_callback_t.java  (+59 more)
jvm/src/main/cpp/hello_world/: CMakeLists.txt
jvm/src/main/swig/: llama.i
jvm/tools/: settings.gradle
jvm/tools/batch-processor/: settings.gradle
jvm/tools/batch-processor/src/main/resources/: application.properties
jvm/tools/benchmarking/: settings.gradle
jvm/tools/benchmarking/src/main/resources/: application.properties
jvm/tools/context-manager/: README.md  settings.gradle
jvm/tools/context-manager/src/main/resources/: application.properties
jvm/tools/embeddings/: settings.gradle
jvm/tools/embeddings/src/main/resources/: application.properties
jvm/tools/kv-cache/: README.md  settings.gradle
jvm/tools/kv-cache/src/main/resources/: application.properties
jvm/tools/model-loader/: settings.gradle
jvm/tools/model-loader/src/main/resources/: application.properties
jvm/tools/sampling/: settings.gradle
jvm/tools/sampling/src/main/resources/: application.properties
jvm/tools/server/src/main/resources/: application.properties
jvm/tools/tokenization/: README.md  micronaut-cli.yml  run.sh  settings.gradle  test-api.sh
jvm/tools/tokenization/src/main/resources/: application.properties  application.yml
jvm/tools/tts/: settings.gradle
jvm/tools/tts/src/main/resources/: application.properties
(+166 files in other folders)
